cmake_minimum_required(VERSION 3.15)
project(ft_printf C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)
include_directories(src)
include_directories(test/functional/src/Unity)

add_executable(ft_printf
        libft/src/ft_abs.c
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_calloc.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_isspace.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstappend.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstlast.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_max.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_min.c
        libft/src/ft_power.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putnstr.c
        libft/src/ft_putnstr_fd.c
        libft/src/ft_puts.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_sqrt.c
        libft/src/ft_strcapitalize.c
        libft/src/ft_strcat.c
        libft/src/ft_strcchr.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_strintab.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlast.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlcpy.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strndup.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strrev.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/libft.h
        src/complete_specifier/functions/complete_specifier_b.c
        src/complete_specifier/functions/complete_specifier_c.c
        src/complete_specifier/functions/complete_specifier_f.c
        src/complete_specifier/functions/complete_specifier_i.c
        src/complete_specifier/functions/complete_specifier_o.c
        src/complete_specifier/functions/complete_specifier_p.c
        src/complete_specifier/functions/complete_specifier_s.c
        src/complete_specifier/functions/complete_specifier_u.c
        src/complete_specifier/functions/complete_specifier_x.c
        src/complete_specifier/complete_specifier.c
        src/data_specifier/functions/data_specifier_c.c
        src/data_specifier/functions/data_specifier_f.c
        src/data_specifier/functions/data_specifier_i.c
        src/data_specifier/functions/data_specifier_p.c
        src/data_specifier/functions/data_specifier_pc.c
        src/data_specifier/functions/data_specifier_s.c
        src/data_specifier/functions/data_specifier_u.c
        src/data_specifier/data_specifier.c
        src/parse_specifier/parse_specifier.c
        src/print_specifier/functions/print_specifier_b.c
        src/print_specifier/functions/print_specifier_c.c
        src/print_specifier/functions/print_specifier_f.c
        src/print_specifier/functions/print_specifier_i.c
        src/print_specifier/functions/print_specifier_o.c
        src/print_specifier/functions/print_specifier_p.c
        src/print_specifier/functions/print_specifier_s.c
        src/print_specifier/functions/print_specifier_u.c
        src/print_specifier/functions/print_specifier_x.c
        src/print_specifier/functions/print_specifier_xx.c
        src/print_specifier/print_specifier.c
        src/utils/printing/pf_putchar.c
        src/utils/printing/pf_putfloat.c
        src/utils/printing/pf_putint.c
        src/utils/printing/pf_putnchar.c
        src/utils/printing/pf_puts.c
        src/utils/printing/pf_putuint.c
        src/utils/get_ndigits_int.c
        src/utils/get_ndigits_uint.c
        src/utils/min.c
        src/validate_specifier/functions/validate_specifier_b.c
        src/validate_specifier/functions/validate_specifier_c.c
        src/validate_specifier/functions/validate_specifier_f.c
        src/validate_specifier/functions/validate_specifier_i.c
        src/validate_specifier/functions/validate_specifier_p.c
        src/validate_specifier/functions/validate_specifier_s.c
        src/validate_specifier/functions/validate_specifier_u.c
        src/validate_specifier/functions/validate_specifier_x.c
        src/validate_specifier/validate_specifier.c
        src/ft_asprintf.c
        src/ft_dprintf.c
        src/ft_printf.c
        src/ft_printf_private.h
        src/ft_snprintf.c
        src/ft_sprintf.c
        src/ft_vasprintf.c
        src/ft_vdprintf.c
        src/ft_vprintf.c
        src/ft_vsnprintf.c
        src/ft_vsprintf.c
        test/functional/src/Unity/unity.c
        test/functional/src/Unity/unity.h
        test/functional/src/Unity/unity_internals.h
        test/functional/src/main.c
        ft_printf.h)
